deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-dashboard
  namespace: platform-cicd
spec:
  to:
    kind: Service
    name: ci-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
